2016-XX-YY Sébastien Millet <milletseb@laposte.net>

	* Version 0.2 built
	* Provides hash calculation options
	* Fixes a bug with -n or -N option causing Windows crash

2016-01-29 Sébastien Millet <milletseb@laposte.net>

	* Version 0.1 built

2016-01-09 Sébastien Millet <milletseb@laposte.net>

	* 'autotool'ed pkfile
